Git Tests/force-app/main/default/default/objects/Opportunity/fields/AprovadoComercial__c.field-meta.xml
<CustomField>
    <fullName>AprovadoComercial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Comercial?</label>
    <type>Checkbox</type>
</CustomField>