Git Tests/force-app/main/default/default/objects/Opportunity/fields/AprovadoPricing__c.field-meta.xml
<CustomField>
    <fullName>AprovadoPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Pricing?</label>
    <type>Checkbox</type>
</CustomField>