Git Tests/force-app/main/default/default/objects/Opportunity/fields/AprovadoRegionalizacao__c.field-meta.xml
<CustomField>
    <fullName>AprovadoRegionalizacao__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aprovado Regionalização?</label>
    <type>Checkbox</type>
</CustomField>