Git Tests/force-app/main/default/default/objects/Opportunity/fields/AvisoMalha__c.field-meta.xml
<CustomField>
    <fullName>AvisoMalha__c</fullName>
    <formula>IF( QuantidadeForaMalha__c &gt; 0, &quot;Sim&quot;, &quot;Não&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contém itens fora de malha?</label>
    <type>Text</type>
</CustomField>