Git Tests/force-app/main/default/default/objects/Opportunity/fields/CanalVendas__c.field-meta.xml
<CustomField>
    <fullName>CanalVendas__c</fullName>
    <label>Canal de vendas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>PORTAL DE COTAÇÕES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>