Git Tests/force-app/main/default/default/objects/Opportunity/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Categoria</label>
    <length>32</length>
    <type>Text</type>
</CustomField>