Git Tests/force-app/main/default/default/objects/Opportunity/fields/CDsBloqueado__c.field-meta.xml
<CustomField>
    <fullName>CDsBloqueado__c</fullName>
    <label>CDs bloqueado</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>