Git Tests/force-app/main/default/default/objects/Opportunity/fields/ClienteRecebedor__c.field-meta.xml
<CustomField>
    <fullName>ClienteRecebedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente recebedor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orçamentos</relationshipLabel>
    <relationshipName>Orcamentos</relationshipName>
    <type>Lookup</type>
</CustomField>