Git Tests/force-app/main/default/default/objects/Opportunity/fields/CNPJCD__c.field-meta.xml
<CustomField>
    <fullName>CNPJCD__c</fullName>
    <label>CNPJ do CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>