Git Tests/force-app/main/default/default/objects/Opportunity/fields/CNPJClienteRecebedor__c.field-meta.xml
<CustomField>
    <fullName>CNPJClienteRecebedor__c</fullName>
    <formula>ClienteRecebedor__r.CNPJ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CNPJ (cliente recebedor)</label>
    <type>Text</type>
</CustomField>