Git Tests/force-app/main/default/default/objects/Opportunity/fields/ContatoOrcamento__c.field-meta.xml
<CustomField>
    <fullName>ContatoOrcamento__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contato do orçamento</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Orcamentos</relationshipName>
    <type>Lookup</type>
</CustomField>