Git Tests/force-app/main/default/default/objects/Opportunity/fields/CotacoesConsolidadas__c.field-meta.xml
<CustomField>
    <fullName>CotacoesConsolidadas__c</fullName>
    <description>Quando o portal recebe uma cotação, essa cotação pode ser um consolidação de diversas cotações para diferentes CNPJ do mesmo cliente.</description>
    <label>Cotações Consolidadas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>