Git Tests/force-app/main/default/default/objects/Opportunity/fields/DataEmissaoPedido__c.field-meta.xml
<CustomField>
    <fullName>DataEmissaoPedido__c</fullName>
    <label>Data da emissão do pedido</label>
    <type>Date</type>
</CustomField>