Git Tests/force-app/main/default/default/objects/Opportunity/fields/DataPrevistaEntrega__c.field-meta.xml
<CustomField>
    <fullName>DataPrevistaEntrega__c</fullName>
    <label>Data prevista entrega</label>
    <type>Date</type>
</CustomField>