Git Tests/force-app/main/default/default/objects/Opportunity/fields/DatasParcelas__c.field-meta.xml
<CustomField>
    <fullName>DatasParcelas__c</fullName>
    <label>Datas das parcelas</label>
    <type>TextArea</type>
</CustomField>