Git Tests/force-app/main/default/default/objects/Opportunity/fields/DataVencimento__c.field-meta.xml
<CustomField>
    <fullName>DataVencimento__c</fullName>
    <label>Data de Vencimento</label>
    <type>DateTime</type>
</CustomField>