Git Tests/force-app/main/default/default/objects/Opportunity/fields/DiaParcelas__c.field-meta.xml
<CustomField>
    <fullName>DiaParcelas__c</fullName>
    <label>Dias das parcelas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>