Git Tests/force-app/main/default/default/objects/Opportunity/fields/EnderecoEntregaPedido__c.field-meta.xml
<CustomField>
    <fullName>EnderecoEntregaPedido__c</fullName>
    <label>Endereço de entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>