Git Tests/force-app/main/default/default/objects/Opportunity/fields/ExternalPortal__c.field-meta.xml
<CustomField>
    <fullName>ExternalPortal__c</fullName>
    <externalId>true</externalId>
    <label>ExternalPortal</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>