Git Tests/force-app/main/default/default/objects/Opportunity/fields/Filtro_PDF__c.field-meta.xml
<CustomField>
    <fullName>Filtro_PDF__c</fullName>
    <label>Filtro PDF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>