Git Tests/force-app/main/default/default/objects/Opportunity/fields/FormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>FormaPagamento__c</fullName>
    <label>Forma de pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Boleto</fullName>
            </value>
            <value>
                <fullName>Depósito</fullName>
            </value>
            <value>
                <fullName>Carteira</fullName>
            </value>
            <value>
                <fullName>Cartão de Credito</fullName>
            </value>
            <value>
                <fullName>Cartão de Debito</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Dinheiro</fullName>
            </value>
            <value>
                <fullName>Eletrônico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>