Git Tests/force-app/main/default/default/objects/Opportunity/fields/Frete__c.field-meta.xml
<CustomField>
    <fullName>Frete__c</fullName>
    <label>Frete por CD</label>
    <type>TextArea</type>
</CustomField>