Git Tests/force-app/main/default/default/objects/Opportunity/fields/IdCotacaoFormula__c.field-meta.xml
<CustomField>
    <fullName>IdCotacaoFormula__c</fullName>
    <formula>ExternalPortal__c + &apos; / &apos; +  IdIntegrator__c</formula>
    <label>Id da cotação ( Portal / Integradora )</label>
    <type>Text</type>
</CustomField>