Git Tests/force-app/main/default/default/objects/Opportunity/fields/IdPortal__c.field-meta.xml
<CustomField>
    <fullName>IdPortal__c</fullName>
    <externalId>true</externalId>
    <label>Id Portal</label>
    <length>32</length>
    <type>Text</type>
</CustomField>