Git Tests/force-app/main/default/default/objects/Opportunity/fields/Integradora__c.field-meta.xml
<CustomField>
    <fullName>Integradora__c</fullName>
    <label>Integradora</label>
    <length>255</length>
    <type>Text</type>
</CustomField>