Git Tests/force-app/main/default/default/objects/Opportunity/fields/LastIntegratedItem__c.field-meta.xml
<CustomField>
    <fullName>LastIntegratedItem__c</fullName>
    <description>Aponta para o último QuoteItem__c que foi enviado para o informática com sucesso.</description>
    <label>Último item integrado</label>
    <type>TextArea</type>
</CustomField>