Git Tests/force-app/main/default/default/objects/Opportunity/fields/Margem__c.field-meta.xml
<CustomField>
    <fullName>Margem__c</fullName>
    <label>Margem</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>