Git Tests/force-app/main/default/default/objects/Opportunity/fields/MensagemErroIntegracaoPortalCotacoes__c.field-meta.xml
<CustomField>
    <fullName>MensagemErroIntegracaoPortalCotacoes__c</fullName>
    <label>Mensagem de erro Integração (Portal)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>