Git Tests/force-app/main/default/default/objects/Opportunity/fields/MotivoCancelamento__c.field-meta.xml
<CustomField>
    <fullName>MotivoCancelamento__c</fullName>
    <label>Motivo Cancelamento</label>
    <type>TextArea</type>
</CustomField>