Git Tests/force-app/main/default/default/objects/Opportunity/fields/NameFormula__c.field-meta.xml
<CustomField>
    <fullName>NameFormula__c</fullName>
    <formula>Name</formula>
    <label>Título do Orçamento</label>
    <type>Text</type>
</CustomField>