Git Tests/force-app/main/default/default/objects/Opportunity/fields/NecessitaAprovacaoPricing__c.field-meta.xml
<CustomField>
    <fullName>NecessitaAprovacaoPricing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Necessita aprovação pricing</label>
    <type>Checkbox</type>
</CustomField>