Git Tests/force-app/main/default/default/objects/Opportunity/fields/NumeroOrcamento__c.field-meta.xml
<CustomField>
    <fullName>NumeroOrcamento__c</fullName>
    <displayFormat>OR-{00000000}</displayFormat>
    <label>Número do orçamento</label>
    <type>AutoNumber</type>
</CustomField>