Git Tests/force-app/main/default/default/objects/Opportunity/fields/NumeroPedido__c.field-meta.xml
<CustomField>
    <fullName>NumeroPedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Número do pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orçamentos</relationshipLabel>
    <relationshipName>Orcamentos</relationshipName>
    <type>Lookup</type>
</CustomField>