Git Tests/force-app/main/default/default/objects/Opportunity/fields/ObservacoesCliente__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesCliente__c</fullName>
    <label>Observações (cliente)</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>