Git Tests/force-app/main/default/default/objects/Opportunity/fields/ObservacoesLongText__c.field-meta.xml
<CustomField>
    <fullName>ObservacoesLongText__c</fullName>
    <label>Observações</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>