Git Tests/force-app/main/default/default/objects/Opportunity/fields/OpportunityLineItemCount__c.field-meta.xml
<CustomField>
    <fullName>OpportunityLineItemCount__c</fullName>
    <description>Esse campo soma todos os itens de oportunidade (OpportunityLineItem) dessa oportunidade.
Campo usado para validação &apos;DontAllowNewItensToExpiredOpportunity&apos;.</description>
    <label>Quantidade de itens de oportunidade</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>