Git Tests/force-app/main/default/default/objects/Opportunity/fields/OrcamentoCancelado__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoCancelado__c</fullName>
    <label>Orçamento Cancelado</label>
    <length>255</length>
    <type>Text</type>
</CustomField>