Git Tests/force-app/main/default/default/objects/Opportunity/fields/OrcamentoOriginal__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoOriginal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Orçamento original</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Orçamentos</relationshipLabel>
    <relationshipName>Orcamentos</relationshipName>
    <type>Lookup</type>
</CustomField>