Git Tests/force-app/main/default/default/objects/Opportunity/fields/OrcamentoTravado__c.field-meta.xml
<CustomField>
    <fullName>OrcamentoTravado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>diz se o orçamento deve ou não ser travado em tela.</description>
    <label>OrçamentoTravado</label>
    <type>Checkbox</type>
</CustomField>