Git Tests/force-app/main/default/default/objects/Opportunity/fields/PrazoEntrega__c.field-meta.xml
<CustomField>
    <fullName>PrazoEntrega__c</fullName>
    <label>Prazo de Entrega</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>