Git Tests/force-app/main/default/default/objects/Opportunity/fields/PrazoValidade__c.field-meta.xml
<CustomField>
    <fullName>PrazoValidade__c</fullName>
    <label>Prazo de validade (em dias)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>