Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidadeItens__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItens__c</fullName>
    <inlineHelpText>Quantidade de itens no orçamento</inlineHelpText>
    <label>Quantidade de Itens</label>
    <summaryForeignKey>QuoteItem__c.OpportunityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>