Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidadeItensConfirmados__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItensConfirmados__c</fullName>
    <label>Quantidade de itens confirmados</label>
    <summaryFilterItems>
        <field>QuoteItem__c.Status__c</field>
        <operation>equals</operation>
        <value>RESGATADO</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.OpportunityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>