Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidadeItensRespondidos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItensRespondidos__c</fullName>
    <label>Quantidade de Itens Respondidos</label>
    <summaryFilterItems>
        <field>QuoteItem__c.AnsweredQuote__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.OpportunityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>