Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidadeItensTotal__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeItensTotal__c</fullName>
    <label>Quantidade de Itens Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>