Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidadeProrrogamentos__c.field-meta.xml
<CustomField>
    <fullName>QuantidadeProrrogamentos__c</fullName>
    <label>Quantidade de prorrogações</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>