Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuantidaItensNaoResp__c.field-meta.xml
<CustomField>
    <fullName>QuantidaItensNaoResp__c</fullName>
    <label>Quantida de Itens Não Respondidos</label>
    <summaryFilterItems>
        <field>QuoteItem__c.Status__c</field>
        <operation>equals</operation>
        <value>Não Vinculado</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteItem__c.OpportunityId__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>