Git Tests/force-app/main/default/default/objects/Opportunity/fields/QuoteType__c.field-meta.xml
<CustomField>
    <fullName>QuoteType__c</fullName>
    <label>Tipo de Cotação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>