Git Tests/force-app/main/default/default/objects/Opportunity/fields/Regiao__c.field-meta.xml
<CustomField>
    <fullName>Regiao__c</fullName>
    <formula>IF(NOT(ISBLANK(Account.BillingCity)), Account.BillingCity + &apos; - &apos;, &apos;&apos;) +  Account.BillingState</formula>
    <label>Região</label>
    <type>Text</type>
</CustomField>