Git Tests/force-app/main/default/default/objects/Opportunity/fields/RepresentanteVDELookup__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteVDELookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante VDE</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesTrabalhadas</relationshipName>
    <type>Lookup</type>
</CustomField>