Git Tests/force-app/main/default/default/objects/Opportunity/fields/RepresentanteVDILookup__c.field-meta.xml
<CustomField>
    <fullName>RepresentanteVDILookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Representante VDI/VDS</label>
    <referenceTo>User</referenceTo>
    <relationshipName>OportunidadesTrabalhadasVDI</relationshipName>
    <type>Lookup</type>
</CustomField>