Git Tests/force-app/main/default/default/objects/Opportunity/fields/StatusAprovacao__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacao__c</fullName>
    <label>Status de aprovação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StatusAprovacao</valueSetName>
    </valueSet>
</CustomField>