Git Tests/force-app/main/default/default/objects/Opportunity/fields/StatusIntegracaoPortalCotacoes__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracaoPortalCotacoes__c</fullName>
    <label>Status de Integração (Portal)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Não Integrado</fullName>
                <default>true</default>
                <label>Não Integrado</label>
            </value>
            <value>
                <fullName>Falha na Integração</fullName>
            </value>
            <value>
                <fullName>Integrado</fullName>
            </value>
            <value>
                <fullName>Recebendo dados</fullName>
            </value>
            <value>
                <fullName>Recebida</fullName>
            </value>
            <value>
                <fullName>Integrada</fullName>
                <isActive>false</isActive>
                <label>Integrada</label>
            </value>
            <value>
                <fullName>Não Integrada</fullName>
                <isActive>false</isActive>
                <label>Não Integrada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>